# brsr-disclosure-heatmap

./: README.md  main.py  pyproject.toml
data/processed/: disclosure_matrix.csv  sector_summary.csv
data/raw/: .~lock.scores.csv#  collection_notes.md  scores.csv
src/: analysis.py  build_matrix.py  heatmap.py  sector_chart.py
